syntax = "proto3";

//package appchatclient;

//option java_package = "com.ajpham.appchatclient.dto";
option java_outer_classname = "ResponseDTO";

enum TypeMessage{
    LOGIN = 0;
    TOKEN = 1;
    REGISTER = 2;
    LOGOUT = 3;
    AUTHENCATION = 4;
    CREATECHANNEL = 5;
    CHAT = 6;
    LISTUSER = 7;
    LISTCHANNEL = 8;
    FINDUSER = 9;
    ALLMESSAGE = 10;
}

message Token {
    string token = 1;
}

message User {
    string name = 1;
    string userName = 2;
    bytes avatar = 3;
}

message Channel {
    string userCreate = 1;
    string channelName = 2;
    bytes avatar = 3;
    string listMembers = 4; 
}

message Message {
    string body = 1;
    string timeSend = 2;
    string userNameSend = 3;
}

message ListUser {
    repeated User listUsers = 1;
}

message ListChannel {
    repeated Channel listChannels = 1;
}

message AllMessage {
    repeated Message allMessage =1;
}

message Response {
    TypeMessage type = 1;
    Token token = 2;
    User user = 3;
    string userReq = 4;
    Channel channel = 5;
    string channelName = 6;
    Message messageChat = 7;
    ListUser listUser = 8;
    ListChannel listChannel = 9;
    AllMessage allMessage = 10;
    string status = 11;
}